--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 httplib2==0.9.2
 idna==2.8
 importlib-metadata==1.5.0
